--- a/EmployeeManagement/src/main/resources/i18n/ValidationMessages.properties
+++ b/EmployeeManagement/src/main/resources/i18n/ValidationMessages.properties
@@ -2,11 +2,11 @@
 # バインドエラーメッセージ
 # ========================
 # パターン1
-typeMismatch.signupForm.age=数値を入力してください
-typeMismatch.signupForm.birthday=yyyy/MM/dd形式で入力してください
+##typeMismatch.signupForm.age=数値を入力してください
+typeMismatch.signupForm.emp_join_date=yyyy/MM/dd形式で入力してください
 # パターン2
 #typeMismatch.age=数値を入力してください(パターン2
-#typeMismatch.birthday=yyyy/MM/dd形式で入力してください(パターン2)
+#typeMismatch.emp_join_date=yyyy/MM/dd形式で入力してください(パターン2)
 # パターン3
 #typeMismatch.int=数値を入力してください(パターン3)
 #typeMismatch.java.lang.Integer=数値を入力してください(パターン3)
