--- a/EmployeeManagement/src/main/resources/i18n/messages.properties
+++ b/EmployeeManagement/src/main/resources/i18n/messages.properties
@@ -1,11 +1,11 @@
 emp_signup_title=ユーザー登録
 emp_signup_btn=ユーザー登録
-emp_id=ユーザーID
-emp_password=パスワード
-emp_name=氏名
-emp_phone=電話番号
-emp_email=Eメール
-emp_join_date=入社日
+employeeId=社員番号
+employeePassword=パスワード
+employeeName=氏名
+employeePhone=電話番号
+employeeEmail=Eメール
+employeeJoinDate=入社日
 
 
 
