--- a/EmployeeManagement/src/main/resources/i18n/messages.properties
+++ b/EmployeeManagement/src/main/resources/i18n/messages.properties
@@ -1,5 +1,5 @@
-emp_signup_title=ユーザー登録
-emp_signup_btn=ユーザー登録
+emp_signup_title=社員登録
+emp_signup_btn=社員登録
 employeeId=社員番号
 employeePassword=パスワード
 employeeName=氏名
