追加課題以外の実装終了

--- a/EmployeeManagement/src/main/resources/i18n/messages.properties
+++ b/EmployeeManagement/src/main/resources/i18n/messages.properties
@@ -1,17 +1,8 @@
 emp_signup_title=社員登録
-emp_signup_btn=社員登録
+emp_signup_btn=登録
 employeeId=社員番号
 employeePassword=パスワード
 employeeName=氏名
 employeePhone=電話番号
 employeeEmail=Eメール
 employeeJoinDate=入社日
-
-
-
-
-
-
-
-
-
